# ProtoScope

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  tmp_filelist.txt
src/: CMakeLists.txt  main.cc  main.cpp  protoscope.rc.in
src/app/: adaptive_performance.cc  application.cc  application.cpp  startup_diagnostics.cc  windows_args.cc
src/config/: config.cc  config.cpp  embedded_protocols.cc  embedded_protocols.cpp
src/dock/: docks.cc  docks.cpp
src/logging/: logging.cc
src/plot/: csv_data_file.cc  oscilloscope.cc  oscilloscope.cpp  raw_capture_file.cc  raw_capture_file.cpp  wave_fft.cc  wave_fft.cpp  wave_math.cc  wave_math.cpp
src/plugin/: elf_static_view_bridge.cc  elf_static_view_bridge.cpp
src/protocol_utils/: codec.cc  codec.cpp
src/scripting/: frame_stream_parser.cc  frame_stream_parser.cpp  pipeline_threading.cc  script_host.cpp  script_runtime_worker.cc  script_runtime_worker.cpp
src/scripting/host/: codec_api_module.cc  codec_api_module.cpp  control_api_module.cc  control_api_module.cpp  core_api_module.cc  core_api_module.cpp  file_api_module.cc  file_api_module.cpp  oscilloscope_api_module.cc  plot_api_module.cc  plot_api_module.cpp  script_callback_dispatcher.cc  script_callback_dispatcher.cpp  script_callback_dispatcher.hpp  script_file_system_facade.cc  script_file_system_facade.cpp  script_file_system_facade.hpp  script_host_api_module.hpp  script_host_context.hpp  script_host_core.cc  script_host_core.cpp  script_host_internal.hpp  script_host_loader.cc  script_host_loader.cpp  script_host_lua_helpers.hpp  script_host_parser.cc  script_host_runtime.hpp  script_host_service.hpp  status_api_module.cc  status_api_module.cpp  stream_schema_module.cc  stream_schema_module.cpp  tx_api_module.cc  tx_api_module.cpp  ui_api_module.cc  ui_api_module.cpp
src/session/: session_package.cc
src/transport/: serial_ports.cc  transport.cc  transport.cpp  udp_transport.cc
src/ui/: algorithm_help.cc  dock_layout.cc  dock_layout.cpp  editable_combo.cc  editable_combo.cpp  gui_runtime.cpp  keyboard_shortcuts.cc  protocol_state_file.cc  protocol_ui_state.cc  protocol_ui_state.cpp  ui_theme.cc  ui_theme.cpp  update_check.cc  wave_dock_renderer.cpp
src/ui/dialogs/: about_dialog.cpp  dialog_host.cc  dialog_host.cpp  elf_static_address_dialog.cpp  log_export_dialog.cpp  raw_capture_dialog.cpp  runtime_dialog.hpp  script_dialog_host.cpp  update_check_dialog.cpp
src/ui/docks/: comm_dock.cc  comm_dock.cpp  dock_host.cc  dock_host.cpp  dock_widgets.hpp  log_dock.cpp  lua_control_label.hpp  lua_dock_host.cc  lua_dock_host.cpp  offline_replay_dock.cc  protocol_dock.cpp  runtime_dock.hpp  script_dock.cpp  transfer_dock.cpp
src/ui/runtime/: config_controller.cc  config_controller.cpp  gui_runtime_core.cc  gui_runtime_core.cpp  gui_runtime_detail.hpp  help_menu.cc  help_menu.cpp  lua_view_menu.cc  lua_view_menu.cpp  main_menu.cc  main_menu.cpp  platform_controller.cc  platform_controller.cpp  protoscope_windows_resource.h  runtime_controller.hpp  runtime_module.hpp  runtime_ui_context.hpp  shortcut_controller.cc  ui_components.cc  ui_components.cpp  workspace_controller.cc  workspace_controller.cpp  workspace_controller.hpp
src/ui/wave/: wave_channel_legend.cc  wave_channel_legend.cpp  wave_channel_legend_bar.cc  wave_channel_legend_bar.cpp  wave_channel_renderer.cc  wave_channel_renderer.cpp  wave_component.hpp  wave_context.hpp  wave_detail.hpp  wave_dock_renderer.cc  wave_dock_renderer.cpp  wave_fft_component.hpp  wave_fft_layer.cc  wave_fft_layer.cpp  wave_interaction_controller.cc  wave_interaction_controller.cpp  wave_measurement_overlay.cc  wave_measurement_overlay.cpp  wave_measurement_overlay_layer.cc  wave_measurement_overlay_layer.cpp  wave_overview_layer.cc  wave_overview_layer.cpp  wave_phosphor_renderer.cc  wave_plot_layer.cc  wave_plot_layer.cpp  wave_render_service.hpp  wave_toolbar.cc  wave_toolbar.cpp  wave_viewport_controller.cc  wave_viewport_controller.cpp
tests/: CMakeLists.txt  test_algorithm_help.cc  test_application.cc  test_application.cpp  test_codec.cc  test_codec.cpp  test_dock.cc  test_dock.cpp  test_dock_layout.cc  test_dock_layout.cpp  test_elf_static_view_bridge.cc  test_elf_static_view_bridge.cpp  test_frame_stream_parser.cc  test_frame_stream_parser.cpp  test_headless_core.cc  test_headless_main.cc  test_headless_plot.cc  test_helpers.hpp  test_keyboard_shortcuts.cc  test_main.cc  test_main.cpp  test_plot.cc  test_plot.cpp  test_protocol_state_file.cc  test_registry.cc  test_registry.hpp  test_runtime_scheduler.cc  test_script_host.cc  test_script_host.cpp  test_script_runtime_worker.cc  test_script_runtime_worker.cpp  test_serial_ports.cc  test_serial_ports.cpp  test_startup_diagnostics.cc  test_transport.cc  test_transport.cpp  test_ui_theme.cc  test_update_check.cc  test_version_utils.cc
tests/fixtures/protocols/bytes_only/: main.lua
tests/fixtures/protocols/crc_probe/: main.lua
tests/fixtures/protocols/dialog_requests/: main.lua
tests/fixtures/protocols/dialog_window_options/: main.lua
tests/fixtures/protocols/duplicate_label_controls/: main.lua
tests/fixtures/protocols/elf_symbol_combo/: main.lua
tests/fixtures/protocols/flow_layout/: main.lua
tests/fixtures/protocols/form_layout/: main.lua
tests/fixtures/protocols/inline_group_layout/: main.lua
tests/fixtures/protocols/invalid_compact_label_below_non_positive/: main.lua
tests/fixtures/protocols/invalid_compact_label_below_type/: main.lua
tests/fixtures/protocols/invalid_controls/: main.lua
tests/fixtures/protocols/invalid_dialog_window/: main.lua
tests/fixtures/protocols/invalid_dock_anchor/: main.lua
tests/fixtures/protocols/invalid_elf_symbol_combo/: main.lua
tests/fixtures/protocols/invalid_form_duplicate_control/: main.lua
tests/fixtures/protocols/invalid_form_missing_control/: main.lua
tests/fixtures/protocols/invalid_form_unknown_control/: main.lua
tests/fixtures/protocols/invalid_inline_group_child_layout/: main.lua
tests/fixtures/protocols/invalid_inline_group_children_controls/: main.lua
(+152 files in other folders)
